istio-samples/17-gw-https-support-standard/vs.yml
---
# vs review
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-review
  namespace: myistio # 注意 namespace
spec:
  gateways:
    - istio-tangx-in
  hosts:
    - istio.tangx.in
    - svc-review
  http:
    # 默认路由
    - name: "default-review"
      route:
        - destination:
            host: svc-review
